--- a/disaster-link/package.json
+++ b/disaster-link/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/kit": "^2.50.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.4",
 		"@tailwindcss/vite": "^4.1.18",
+		"@types/leaflet": "^1.9.21",
 		"@types/node": "^24",
 		"eslint": "^9.39.2",
 		"eslint-config-prettier": "^10.1.8",
@@ -36,6 +37,7 @@
 		"vite": "^7.3.1"
 	},
 	"dependencies": {
-		"daisyui": "^5.5.17"
+		"daisyui": "^5.5.17",
+		"leaflet": "^1.9.4"
 	}
 }
