--- a/disaster-link/package.json
+++ b/disaster-link/package.json
@@ -37,6 +37,10 @@
 		"vite": "^7.3.1"
 	},
 	"dependencies": {
+		"@supabase/auth-ui-shared": "^0.1.8",
+		"@supabase/auth-ui-svelte": "^0.2.9",
+		"@supabase/ssr": "^0.8.0",
+		"@supabase/supabase-js": "^2.95.3",
 		"daisyui": "^5.5.17",
 		"leaflet": "^1.9.4"
 	}
