--- a/disaster-link/package.json
+++ b/disaster-link/package.json
@@ -41,7 +41,6 @@
 		"@supabase/auth-ui-svelte": "^0.2.9",
 		"@supabase/ssr": "^0.8.0",
 		"@supabase/supabase-js": "^2.95.3",
-		"daisyui": "^5.5.17",
-		"leaflet": "^1.9.4"
+		"daisyui": "^5.5.17"
 	}
 }
